# tea-ai

./: .gitignore  Justfile  README.md  baseline.txt  baseline_v2.txt  config.json  main.py  pyproject.toml
configs/datasets/: coco1024.json
dinov3/: LICENSE.md
tests/: test_pipeline_config.py
