[project]
name = "tea-ai"
version = "0.1.0"
description = "Composable AI pipeline workspace"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "augment-checker",
  "detector-grader",
  "detector-reviewer",
  "detector-infer",
  "detector-train",
  "detector-evaluator",
  "dataset-generator",
  "dataset-fetcher",
  "target-labeller",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
augment-checker = { workspace = true }
detector-grader = { workspace = true }
detector-reviewer = { workspace = true }
detector-infer = { workspace = true }
detector-train = { workspace = true }
detector-evaluator = { workspace = true }
dataset-generator = { workspace = true }
dataset-fetcher = { workspace = true }
target-labeller = { workspace = true }
