[project]
name = "tea-ai"
version = "0.1.0"
description = "Composable AI pipeline workspace"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "pipeline-config",
  "dinov3-fetcher",
  "dinov3",
  "augment-checker",
  "detector-grader",
  "detector-reviewer",
  "detector-infer",
  "detector-train",
  "dataset-generator",
  "dataset-fetcher",
  "target-labeller",
  "huggingface-hub>=1.4.1",
]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
pipeline-config = { workspace = true }
dinov3-fetcher = { workspace = true }
dinov3 = { workspace = true }
augment-checker = { workspace = true }
detector-grader = { workspace = true }
detector-reviewer = { workspace = true }
detector-infer = { workspace = true }
detector-train = { workspace = true }
dataset-generator = { workspace = true }
dataset-fetcher = { workspace = true }
target-labeller = { workspace = true }
